# carely_Replit

./: .replit  README.md  carely.db  main.py  pyproject.toml  replit.md
.local/state/replit/agent/filesystem/: filesystem_state.json
app/agents/: companion_agent.py
app/api/: routes.py
app/auth/: auth_utils.py
app/database/: crud.py  models.py
app/memory/: conversation_store.py
app/scheduling/: reminder_scheduler.py
attached_assets/: Pasted-Create-a-Python-web-application-called-Carely-an-AI-companion-for-elderly-care-with-the-followin-1759781189698_1759781189699.txt
data/: sample_data.py
frontend/: dashboard.py
utils/: emergency_detection.py  sentiment_analysis.py  telegram_notification.py
