[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.118.0",
    "openai>=2.2.0",
    "plotly>=6.3.1",
    "sqlmodel>=0.0.25",
    "streamlit-mic-recorder>=0.0.8",
    "streamlit>=1.50.0",
]
